--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <body>
     <h1>Raghul</h1>
     <h1>SIST student</h1>
-    <img src="" alt="">
+    <img width="500" src="DJI_0221.jpg" alt="">
 </body>
 </html>
