--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 1.
             </td>
             <td>
-                hackranker
+                Hackranker
             </td>
             <td>
                 <button>Click here to register</button>
@@ -47,7 +47,7 @@
                 2.
             </td>
             <td>
-                teasure hunt
+                Teasure Hunt
             </td>
             <td>
                 <button>Click here to register</button>
